--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Homework JS#2</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/style.css" />
-	<script src="./scripts/task.js"></script>
   </head>
   <body>
-	
+	<div>
+		<script src="./scripts/task.js"></script>
+	</div>
   </body>
 </html>
