task 2 complete and css-style changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   </head>
   <body>
 	<div>
+		<h1>Задание 1 и 2</h1>
 		<script src="./scripts/task.js"></script>
+		<br>
+		<h2 class = "complete">
+			Статус: ГОТОВО
+		</h2>
 	</div>
   </body>
 </html>
