--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <body>
 	<div>
 		<h1>Задание 1 и 2</h1>
-		<script src="./scripts/task.js"></script>
+		<!--<script src="./scripts/task.js"></script>-->
+		<br>
+		<h2 class = "complete">
+			Статус: ГОТОВО
+		</h2>
+	</div>
+	<div>
+		<h1>Задание 3</h1>
+		<!--<script src="./scripts/task3.js"></script>-->
 		<br>
 		<h2 class = "complete">
 			Статус: ГОТОВО
