--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
 	<div>
 		<h1>Задание 1 и 2</h1>
-		<!--<script src="./scripts/task.js"></script>-->
+		<div>
+			<!--<script src="./scripts/task.js"></script>-->
+		</div>
 		<br>
 		<h2 class = "complete">
 			Статус: ГОТОВО
@@ -17,6 +19,14 @@
 	<div>
 		<h1>Задание 3</h1>
 		<!--<script src="./scripts/task3.js"></script>-->
+		<br>
+		<h2 class = "complete">
+			Статус: ГОТОВО
+		</h2>
+	</div>
+	<div>
+		<h1>Задание 4</h1>
+		<script src="./scripts/task4.js"></script>
 		<br>
 		<h2 class = "complete">
 			Статус: ГОТОВО
