task 5 and 6 complete

--- a/index.html
+++ b/index.html
@@ -32,5 +32,13 @@
 			Статус: ГОТОВО
 		</h2>
 	</div>
+	<div>
+		<h1>Задание 5 и 6</h1>
+		<script src="./scripts/task5.js"></script>
+		<br>
+		<h2 class = "complete">
+			Статус: ГОТОВО
+		</h2>
+	</div>
   </body>
 </html>
