task 7 and 8 complete

--- a/index.html
+++ b/index.html
@@ -40,5 +40,13 @@
 			Статус: ГОТОВО
 		</h2>
 	</div>
+	<div>
+		<h1>Задание 7 и 8</h1>
+		<script src="./scripts/task7.js"></script>
+		<br>
+		<h2 class = "complete">
+			Статус: ГОТОВО
+		</h2>
+	</div>
   </body>
 </html>
