--- a/index.html
+++ b/index.html
@@ -48,5 +48,13 @@
 			Статус: ГОТОВО
 		</h2>
 	</div>
+	<div>
+		<h1>Задание 9</h1>
+		<script src="./scripts/task9.js"></script>
+		<br>
+		<h2 class = "complete">
+			Статус: ГОТОВО
+		</h2>
+	</div>
   </body>
 </html>
