task 10 complete and final css update

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <body>
 	<div>
 		<h1>Задание 1 и 2</h1>
-		<div>
-			<!--<script src="./scripts/task.js"></script>-->
+		<!--Нужно закомментить строку ниже, 
+		чтобы быстро проверить генератор случайных чисел из заданий 7-10-->
+		<div class = "about">
+			<p><script src="./scripts/task.js"></script></p>
 		</div>
 		<br>
 		<h2 class = "complete">
@@ -18,7 +20,9 @@
 	</div>
 	<div>
 		<h1>Задание 3</h1>
-		<!--<script src="./scripts/task3.js"></script>-->
+		<!--Нужно закомментить строку ниже, 
+		чтобы быстро проверить генератор случайных чисел из заданий 7-10-->
+		<p><script src="./scripts/task3.js"></script></p>
 		<br>
 		<h2 class = "complete">
 			Статус: ГОТОВО
@@ -26,7 +30,7 @@
 	</div>
 	<div>
 		<h1>Задание 4</h1>
-		<script src="./scripts/task4.js"></script>
+		<p><script src="./scripts/task4.js"></script></p>
 		<br>
 		<h2 class = "complete">
 			Статус: ГОТОВО
@@ -51,6 +55,14 @@
 	<div>
 		<h1>Задание 9</h1>
 		<script src="./scripts/task9.js"></script>
+		<br>
+		<h2 class = "complete">
+			Статус: ГОТОВО
+		</h2>
+	</div>
+	<div>
+		<h1>Задание 10</h1>
+		<script src="./scripts/task10.js"></script>
 		<br>
 		<h2 class = "complete">
 			Статус: ГОТОВО
